--- a/shims/dataproc1421/driver/pom.xml
+++ b/shims/dataproc1421/driver/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.pentaho.hadoop.shims</groupId>
     <artifactId>pentaho-hadoop-shims-dataproc1421-reactor</artifactId>
-     <version>11.0.0.0-196</version>
+     <version>11.0.0.0-latest</version>
   </parent>
 
   <artifactId>pentaho-hadoop-shims-dataproc1421</artifactId>
