--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,11 @@
   <parent>
     <groupId>org.pentaho</groupId>
     <artifactId>pentaho-ce-jar-parent-pom</artifactId>
-    <version>11.1.0.0-SNAPSHOT</version>
+    <version>11.1.0.0-25</version>
   </parent>
 
   <artifactId>pentaho-hadoop-shims</artifactId>
-  <version>11.1.0.0-SNAPSHOT</version>
+  <version>11.1.0.0-25</version>
   <packaging>pom</packaging>
 
   <properties>
@@ -18,15 +18,15 @@
     <eula-wrap_create-dist-phase></eula-wrap_create-dist-phase>
     <org.mockito.version>5.17.0</org.mockito.version>
     <org.hamcrest.version>1.3</org.hamcrest.version>
-    <pentaho-hdfs-vfs.version>11.1.0.0-SNAPSHOT</pentaho-hdfs-vfs.version>
-    <platform.version>11.1.0.0-SNAPSHOT</platform.version>
+    <pentaho-hdfs-vfs.version>11.1.0.0-25</pentaho-hdfs-vfs.version>
+    <platform.version>11.1.0.0-25</platform.version>
     <eula-wrap_attach-dist-phase></eula-wrap_attach-dist-phase>
     <xerces.version>2.8.1</xerces.version>
     <eula-wrap_create-izpack-installer-jar-phase></eula-wrap_create-izpack-installer-jar-phase>
-    <pdi.version>11.1.0.0-SNAPSHOT</pdi.version>
+    <pdi.version>11.1.0.0-25</pdi.version>
     <eula-wrap_assign-deps-to-properties-phase></eula-wrap_assign-deps-to-properties-phase>
-    <pentaho-osgi-bundles.version>11.1.0.0-SNAPSHOT</pentaho-osgi-bundles.version>
-    <big-data-plugin.version>11.1.0.0-SNAPSHOT</big-data-plugin.version>
+    <pentaho-osgi-bundles.version>11.1.0.0-25</pentaho-osgi-bundles.version>
+    <big-data-plugin.version>11.1.0.0-25</big-data-plugin.version>
     <twitter.parquet.version>1.5.0-cdh5.13.0</twitter.parquet.version>
     <jets3t.version>0.9.4</jets3t.version>
     <!-- Added for fragment prototype -->
