--- a/common-base/pom.xml
+++ b/common-base/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.pentaho</groupId>
@@ -65,12 +65,12 @@
         <dependency>
           <groupId>org.apache.parquet</groupId>
           <artifactId>parquet-hadoop</artifactId>
-          <version>${parquet.version}</version> <!-- Use latest compatible version -->
+          <version>${parquet.version}</version>          <!-- Use latest compatible version -->
         </dependency>
         <dependency>
           <groupId>org.apache.parquet</groupId>
-        <artifactId>parquet-avro</artifactId>
-        <version>${parquet.version}</version>
+          <artifactId>parquet-avro</artifactId>
+          <version>${parquet.version}</version>
         </dependency>
         <dependency>
           <groupId>org.apache.parquet</groupId>
@@ -257,6 +257,14 @@
               <groupId>dnsjava</groupId>
               <artifactId>dnsjava</artifactId>
             </exclusion>
+            <exclusion>
+              <groupId>ch.qos.reload4j</groupId>
+              <artifactId>reload4j</artifactId>
+            </exclusion>
+            <exclusion>
+              <groupId>org.slf4j</groupId>
+              <artifactId>slf4j-reload4j</artifactId>
+            </exclusion>
           </exclusions>
         </dependency>
         <dependency>
@@ -293,6 +301,14 @@
               <groupId>io.netty</groupId>
               <artifactId>netty-codec-http</artifactId>
             </exclusion>
+            <exclusion>
+              <groupId>ch.qos.reload4j</groupId>
+              <artifactId>reload4j</artifactId>
+            </exclusion>
+            <exclusion>
+              <groupId>org.slf4j</groupId>
+              <artifactId>slf4j-reload4j</artifactId>
+            </exclusion>
           </exclusions>
         </dependency>
         <dependency>
@@ -316,6 +332,14 @@
               <groupId>io.netty</groupId>
               <artifactId>netty-codec-http</artifactId>
             </exclusion>
+            <exclusion>
+              <groupId>ch.qos.reload4j</groupId>
+              <artifactId>reload4j</artifactId>
+            </exclusion>
+            <exclusion>
+              <groupId>org.slf4j</groupId>
+              <artifactId>slf4j-reload4j</artifactId>
+            </exclusion>
           </exclusions>
           <scope>provided</scope>
         </dependency>
@@ -328,6 +352,16 @@
           <groupId>org.apache.hadoop</groupId>
           <artifactId>hadoop-client-api</artifactId>
           <version>${org.apache.hadoop.version}</version>
+          <exclusions>
+            <exclusion>
+              <groupId>ch.qos.reload4j</groupId>
+              <artifactId>reload4j</artifactId>
+            </exclusion>
+            <exclusion>
+              <groupId>org.slf4j</groupId>
+              <artifactId>slf4j-reload4j</artifactId>
+            </exclusion>
+          </exclusions>
           <scope>provided</scope>
         </dependency>
         <dependency>
@@ -443,6 +477,24 @@
       <groupId>org.apache.knox</groupId>
       <artifactId>gateway-shell</artifactId>
       <version>${gateway-shell.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-log4j12</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>log4j</groupId>
+          <artifactId>log4j</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>ch.qos.reload4j</groupId>
+          <artifactId>reload4j</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-reload4j</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>pentaho-kettle</groupId>
@@ -468,6 +520,13 @@
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
       <version>4.5.14</version>
+    </dependency>
+    <!-- Add reload4j for test scope only - Hadoop test classes need log4j1 API -->
+    <dependency>
+      <groupId>ch.qos.reload4j</groupId>
+      <artifactId>reload4j</artifactId>
+      <version>1.2.22</version>
+      <scope>test</scope>
     </dependency>
 
   </dependencies>
