[BACKLOG-47259] Fixed PMR class not found exceptions on EMR
(cherry picked from commit b8514edc62f467628dc10158594e28eff92bccb7)

--- a/shims/emr770/driver/pom.xml
+++ b/shims/emr770/driver/pom.xml
@@ -595,6 +595,12 @@
       <groupId>org.apache.orc</groupId>
       <artifactId>orc-core</artifactId>
       <version>${org.apache.orc.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.apache.hadoop</groupId>
+          <artifactId>hadoop-client-api</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <!-- used by org.apache.orc -->
     <dependency>
