[BACKLOG-47858] Update the pom.xml for pentaho-hadoop-shims and pentaho-big-data-ee to include apachVanilla driver

--- a/shims/pom.xml
+++ b/shims/pom.xml
@@ -263,7 +263,7 @@
       <module>cdpdc71</module>
       <module>apache</module>
       <!--<module>hdi40</module>-->
-      <!--<module>apachevanilla</module>-->
+      <module>apachevanilla</module>
       <module>emr770</module>
     </modules>
   </profile>
