build[PPP-6088]: Add exclusion for mssql-jdbc dependency (#1723)

--- a/shims/apache/driver/pom.xml
+++ b/shims/apache/driver/pom.xml
@@ -166,6 +166,10 @@
           <artifactId>dnsjava</artifactId>
           <groupId>dnsjava</groupId>
         </exclusion>
+        <exclusion>
+          <groupId>com.microsoft.sqlserver</groupId>
+          <artifactId>mssql-jdbc</artifactId>
+        </exclusion>
       </exclusions>
     </dependency>
     <dependency>
